--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
   assets:
     - assets/
     - assets/home_page/
+    - assets/bamin1_page/
+    - assets/screens_page/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
